--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
