--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "ioredis": "^5.6.1",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "uuid": "^11.1.0"
   },
