--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,21 @@ NODE_ENV=development
 # Redis Configuration
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=
+REDIS_PASSWORD=<your-password>
+
+# PostgreSQL Configuration
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=acme_integration
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=<your-password>
+POSTGRES_SSL=false
+POSTGRES_MAX_CONNECTIONS=10
+POSTGRES_IDLE_TIMEOUT=30000
+
+# Storage Configuration
+# Options: postgres, redis
+STORAGE_TYPE=postgres
 
 # JWT Configuration
 JWT_SECRET=your-secret-key
