--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.9.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -29,6 +30,8 @@
     "kafkajs": "^2.2.4",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
+    "pg": "^8.16.0",
+    "pg-pool": "^3.10.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
